Code Update: -Configured Entity framework connection to local sql server -Applied Code first strategy for generating tables -Api for previewing products

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DBConnection": "[Your local server connection strings]"
   }
 }
