Code Update: -Endpoint returning all pizza types -Endpoint for sales report of each pizza type

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Endpoints": {
+    "PizzaTypes": "http://localhost:5283/api/PizzaPlace/pizzatypes"
+  },
   "ConnectionStrings": {
-    "DBConnection": "[Your local server connection strings]"
+    "DBConnection": "[Local db connectionstring]"
   }
 }
