--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Endpoints": {
+    "PizzaTypes": "http://localhost:5283/api/PizzaPlace/pizzatypes"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnection": "[Your local server connection strings]"
+    "DBConnection": "[Local db connectionstring]"
   }
 }
